sandbox/output
ProfitTest.java:2: error: cannot find symbol
    @Test
     ^
  symbol:   class Test
  location: class ProfitTest
ProfitTest.java:4: error: cannot find symbol
        assertEquals(1, 1);
        ^
  symbol:   method assertEquals(int,int)
  location: class ProfitTest
2 errors
